--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:viewpager:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+
+    // Testing
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
